@@ -7,6 +7,8 @@
 #+STARTUP: content
 
 * master(unrelease)
+** Internal Improvements
+- Trending API reuse =curl= instance
 
 * v0.5.0 (2022-04-28)
 ** New Features
